Eliminada invocación a constructor deprecado de clase Long